--- a/_includes/education.html
+++ b/_includes/education.html
@@ -17,7 +17,7 @@
         </div>
         <div class="col-sm-4">
           <div class="education-item">
-            <h3>Lexamn Devram Sonawane</h3>
+            <h3>Laxman Devram Sonawane College</h3>
             <h4>Higher Secondary School Certificate</h4>
             <p class="text-muted">Qualify in 2013</p>
           </div>
