--- a/_includes/work_experience.html
+++ b/_includes/work_experience.html
@@ -10,6 +10,30 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="company-item">
+            <a href="https://daynilgroup.com/" style="color: #faf7f7; border: 0cap;"><h3>eQuadriga Software Pvt. Ltd.</h3></a>
+
+            <h4>Software Developer</h4>
+            <p>2023 - 2024</p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="company-description">
+            <h3>Description</h3>
+            <p>•Worked on the Spring boot and Java based Products.
+              <br>•Add a bug-free new feature to existing software, deploy it to
+              production, and manage it effectively.
+              <br>•Responsibility to design, development, testing, debugging,
+              maintaining and documenting Software Application.
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="company-item">
             <a href="https://daynilgroup.com/" style="color: #faf7f7; border: 0cap;"><h3>Daynil Group Solution Pvt. Ltd.</h3></a>
 
             <h4>Software Developer</h4>
