worked on resume part

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,6 +36,11 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="/assets/Ravi Resume For Interviews (1).pdf">
+                            <i class="fa fa-download" aria-hidden="true"></i> Download Resume
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
