worked on resume

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -37,7 +37,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/assets/Ravi Resume For Interviews (1).pdf">
+                        <a href="{{ site.baseurl }}/assets/Ravi Resume For Interviews (1).pdf">
                             <i class="fa fa-download" aria-hidden="true"></i> Download Resume
                         </a>
                     </li>
