worked on resume

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,11 @@
                                 <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
                             </li>
 		                    {% endfor %}
+                            <li>
+                                <a href="{{ site.url }}/assets/Ravi Resume For Interviews (1).pdf">
+                                    <i class="fa fa-file" aria-hidden="true"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
