worked on resume

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,8 +20,8 @@
                             </li>
 		                    {% endfor %}
                             <li>
-                                <a href="{{ site.url }}/assets/Ravi Resume For Interviews (1).pdf">
-                                    <i class="fa fa-file" aria-hidden="true"></i>
+                                <a href="{{ site.url }}/assets/Ravi Resume For Interviews (1).pdf" class="btn-social btn-outline">
+                                    <i class="fa fa-file"></i>
                                 </a>
                             </li>
                         </ul>
