--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
                             </li>
 		                    {% endfor %}
                             <li>
-                                <a href="{{ site.url }}/assets/Ravi Resume For Interviews (1).pdf" class="btn-social btn-outline">
+                                <a href="{{ site.url }}/assets/Ravi Maurya Resume.pdf" class="btn-social btn-outline">
                                     <i class="fa fa-file"></i>
                                 </a>
                             </li>
